@@ -9,6 +9,7 @@ Revision history for Net-Checkpoint-Management-v1: {{ $dist->version }}
     - add discard method
     - discard changes in api.t
       to not cause locks on the management server used for testing
+    - add test for update_accessrule
 
 0.001001  2019-04-12 13:44:14+02:00 Europe/Vienna
     - Initial release using the JSON REST API version 1
